<resources>
  <string name="app_name">Chat Me</string>
  <string name="sample_conversation">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque rutrum turpis a nisl interdum laoreet. Phasellus sed urna ipsum. Aenean finibus turpis a ultricies vestibulum. Aenean nec neque ante. Duis augue ante, hendrerit eu nisl nec, porta ornare turpis. Pellentesque volutpat magna non sem condimentum, tristique facilisis lorem vestibulum.</string>
  <string name="sample_email">ceosilvajr@gmail.com</string>
  <string name="enter_message">Enter message</string>
  <string name="send">Send</string>
  <string name="sign_up">Sign Up</string>
  <string name="don_t_have_account">Don\'t have account?</string>
  <string name="forgot_password">Forgot Password?</string>
  <string name="login">Login</string>
  <string name="password">Password</string>
  <string name="email">Email</string>
  <string name="enter_your_email">Enter your email</string>
  <string name="you_will_receive_a_reset_password_link">You will receive a reset password link</string>
  <string name="reset_password">Reset password</string>
  <string name="enter_your_password">Enter your password</string>
  <string name="please_enter_at_least_6_characters">Please enter at least 6 characters</string>
  <string name="register">Register</string>
  <string name="message_error_login">Something went wrong during login. Please try again.</string>
</resources>
